--- a/index.css
+++ b/index.css
@@ -9,6 +9,20 @@ body{
 
 }
 
+@media only screen and (max-width:800px) {
+    body{
+        width:80%;
+        
+    }
+}
+
+@media only screen and (max-width:600px) {
+    body{
+        width:100%;
+        
+    }
+}
+
 #titleblock{
     padding-top: 60px;
     padding-left: 50px;
