--- a/mna.css
+++ b/mna.css
@@ -6,6 +6,12 @@ body{
     padding-left: 20px;
 }
 
+@media only screen and (max-width:800px) {
+    body{
+        width:80%;
+    }
+}
+
 #titleblock{
     padding-top: 60px;
     padding-left: 50px;
