--- a/index.css
+++ b/index.css
@@ -19,7 +19,12 @@ body{
 @media only screen and (max-width:600px) {
     body{
         width:100%;
-        
+    }
+}
+
+@media only screen and (max-width:100px) {
+    body{
+        width:100%;
     }
 }
 
