--- a/index.css
+++ b/index.css
@@ -136,7 +136,7 @@ body{
     padding-right:40px;
 }
 
-.shit{
+.second{
     padding-top:10px;
 }
 
@@ -156,6 +156,6 @@ body{
     color:#0047AB;
 }
 
-.fuck {
+.first {
     font-size: 
 }
